Provide enterprise-readable vendor dimension and factor data
Vendor dimension management was routing through strong typed tables while the generic page and open APIs still depended on record-style fields and seeded metadata only. This change restores the vendor management endpoints, maps recordCode/recordName onto semantic dimension columns, and seeds the license, scope, version, dimension, and factor rows needed by enterprise open sync.

Constraint: Vendor backend writes only the vendor database
Constraint: Enterprise endpoints require real backend data, not frontend fallback data
Rejected: Loosen open factor authorization | would bypass license and scope checks instead of proving the real data chain
Confidence: high
Scope-risk: moderate
Directive: Strong dimension tables must retain BaseEntity audit columns because MyBatis-Plus selects inherited fields
Tested: mvn -Pprod -pl ruoyi-admin -am -DskipTests package
Tested: vendor-ui npm run build:prod
Tested: Remote SQL applied to vendor DB on 124.221.155.102
Tested: Remote /open/dimensions returned 3 admin division records
Tested: Remote /open/factors returned EF-OPEN-2025 with 4 records
Not-tested: Authenticated browser CRUD flow in vendor UI