@@ -6,8 +6,6 @@ import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import org.dromara.carbon.vendor.service.ICvDimensionDataService;
 import org.dromara.common.core.domain.R;
-import org.dromara.common.log.annotation.Log;
-import org.dromara.common.log.enums.BusinessType;
 import org.dromara.common.mybatis.core.page.PageQuery;
 import org.dromara.common.mybatis.core.page.TableDataInfo;
 import org.dromara.common.web.core.BaseController;
@@ -22,15 +20,9 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
-/**
- * 统一维度数据 Controller
- * <p>按 dimensionCode 路由到对应的维度表，提供通用 CRUD 接口。</p>
- *
- * @author carbon
- */
 @Validated
 @RequiredArgsConstructor
 @RestController
@@ -39,55 +31,35 @@ public class CvDimensionDataController extends BaseController {
 
     private final ICvDimensionDataService dimensionDataService;
 
-    /**
-     * 分页查询维度数据列表
-     */
     @SaCheckPermission("vendor:dimension:list")
     @GetMapping("/list")
     public TableDataInfo<?> list(@RequestParam String dimensionCode, PageQuery pageQuery) {
         return dimensionDataService.queryPageList(dimensionCode, pageQuery);
     }
 
-    /**
-     * 查询维度数据详情
-     */
-    @SaCheckPermission("vendor:dimension:list")
+    @SaCheckPermission("vendor:dimension:query")
     @GetMapping("/{id}")
-    public R<Map<String, Object>> getInfo(@RequestParam String dimensionCode,
-                                          @NotNull(message = "id不能为空") @PathVariable Long id) {
+    public R<Map<String, Object>> getInfo(@NotNull(message = "id cannot be null") @PathVariable Long id,
+                                          @RequestParam String dimensionCode) {
         return R.ok(dimensionDataService.queryById(dimensionCode, id));
     }
 
-    /**
-     * 新增维度数据
-     */
-    @Log(title = "维度数据", businessType = BusinessType.INSERT)
     @SaCheckPermission("vendor:dimension:add")
     @PostMapping
-    public R<Void> add(@RequestParam String dimensionCode,
-                       @RequestBody Map<String, Object> bo) {
+    public R<Void> add(@RequestParam String dimensionCode, @RequestBody Map<String, Object> bo) {
         return toAjax(dimensionDataService.insertByBo(dimensionCode, bo));
     }
 
-    /**
-     * 修改维度数据
-     */
-    @Log(title = "维度数据", businessType = BusinessType.UPDATE)
     @SaCheckPermission("vendor:dimension:edit")
     @PutMapping
-    public R<Void> edit(@RequestParam String dimensionCode,
-                        @RequestBody Map<String, Object> bo) {
+    public R<Void> edit(@RequestParam String dimensionCode, @RequestBody Map<String, Object> bo) {
         return toAjax(dimensionDataService.updateByBo(dimensionCode, bo));
     }
 
-    /**
-     * 批量删除维度数据
-     */
-    @Log(title = "维度数据", businessType = BusinessType.DELETE)
     @SaCheckPermission("vendor:dimension:remove")
     @DeleteMapping("/{ids}")
-    public R<Void> remove(@RequestParam String dimensionCode,
-                          @NotEmpty(message = "ids不能为空") @PathVariable Long[] ids) {
-        return toAjax(dimensionDataService.deleteByIds(dimensionCode, Arrays.asList(ids)));
+    public R<Void> remove(@NotEmpty(message = "ids cannot be empty") @PathVariable Long[] ids,
+                          @RequestParam String dimensionCode) {
+        return toAjax(dimensionDataService.deleteByIds(dimensionCode, List.of(ids)));
     }
 }
